# bio-manim-lab

./: .env.example  .gitignore  .vercelignore  Makefile  README.md  push.sh  pyproject.toml  vercel.json
api/: generate.py
configs/: default.yaml  models.yaml  styles.yaml
examples/atp_synthase/: concept_map.json  flashcards.json  lesson_outline.json  manim_script.py  quiz.json  scene_plan.json  study_summary.md
prompts/codegen/: manim_generator.md  manim_repair.md
prompts/extract/: concept_graph.md  misconceptions.md
prompts/pedagogy/: exam_depth.md  intuition.md  lesson_outline.md
prompts/quant/: mathcode_prompt.md
prompts/scenes/: scene_planner.md  visual_metaphors.md
prompts/shared/: structured_repair.md
prompts/study/: flashcards.md  quiz.md  summary.md
public/: index.html
src/biomanim/: __init__.py  _compat.py  cli.py
src/biomanim/codegen/: __init__.py
src/biomanim/extract/: __init__.py
src/biomanim/ingest/: __init__.py
src/biomanim/integrations/: graphify_adapter.py
src/biomanim/models/: __init__.py  schemas.py
src/biomanim/pedagogy/: __init__.py
src/biomanim/quant/: __init__.py
src/biomanim/render/: __init__.py
src/biomanim/scenes/: __init__.py
src/biomanim/study/: __init__.py
src/biomanim/supervisor/: __init__.py
src/biomanim/utils/: io.py  llm.py  runtime.py
tests/: test_cli_smoke.py  test_llm_utils.py  test_scene_plan_golden.py  test_schemas.py
